<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="header_main">Playlist maker</string>
    <string name="button_search_main">Поиск</string>
    <string name="button_media_library_main">Медиатека</string>
    <string name="button_settings_main">Настройки</string>
    <string name="black_theme_settings">Темная тема</string>
    <string name="share_app_settings">Поделиться приложением</string>
    <string name="call_settings">Написать в поддержку</string>
    <string name="terms_of_use_settings">Пользовательское соглашение</string>
    <string name="header_setting">Настройки</string>

    <string name="message_icon_round">https://practicum.yandex.ru/android-developer/</string>
    <string name="message_icon_call">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject_icon_call">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_user_icon_call">mish777an@yandex.ru</string>
    <string name="url_icon_arrow">https://yandex.ru/legal/practicum_offer/</string>
    <string name="header_search">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="search_update">Обновить</string>
    <string name="no_internet">Проблемы со связью \n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="you_looking">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="track_time_text_ap">Длительность</string>
    <string name="album_text_ap">Альбом</string>
    <string name="year_text_ap">Год</string>
    <string name="genre_text_ap">Жанр</string>
    <string name="country_text_ap">Страна</string>
    <string name="Media_Library">Медиатека</string>
    <string name="no_playlist">Вы не создали ни одного плейлиста</string>
    <string name="btn_new_playlist">Новый плейлист</string>
    <string name="no_media">Ваша медиатека пуста</string>
    <string name="tab_favorites">Избранные треки</string>
    <string name="tab_playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="hint_name">Название*</string>
    <string name="hint_description">Описание</string>
    <string name="create_button">Создать</string>
    <string name="add_playlist">Добавить в плейлист</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="no_track_playlist">В этом плейлисте нет треков</string>
    <string name="save_button_text">Сохранить</string>
    <string name="header_title_edit">Редактировать</string>
</resources>