<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_ml"
    tools:context=".presentation.settings.activity.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/text_settings_header"
            style="@style/Header_Text_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_setting" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_setting"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/theme"
            style="@style/Text_View_Settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/black_theme_settings"
            tools:ignore="Suspicious0dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="56dp"
            android:layout_height="48dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_setting"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/share"
            style="@style/Text_View_Settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share_app_settings"
            tools:ignore="Suspicious0dp" />

        <Button
            android:id="@+id/icon_round"
            style="@style/Button_Settings"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            app:icon="@drawable/icon_round" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_setting"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/support"
            style="@style/Text_View_Settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/call_settings"
            tools:ignore="Suspicious0dp" />

        <Button
            android:id="@+id/icon_call"
            style="@style/Button_Settings"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            app:icon="@drawable/call" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_setting"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/terms"
            style="@style/Text_View_Settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use_settings"
            tools:ignore="Suspicious0dp" />

        <Button
            android:id="@+id/arrow"
            style="@style/Button_Settings"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            app:icon="@drawable/arrow2" />
    </LinearLayout>
</LinearLayout>