<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SearchActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:padding="4dp">
        <Button
            android:id="@+id/arrow_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            style="@style/Back_Arrow_Style"
            app:icon="@drawable/arrow1"
            android:shadowRadius="0"
            android:shadowDx="0"
            android:shadowDy="0"
            />
        <TextView
            android:id="@+id/text_settings_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Header_Text_Style"
            android:text="@string/header_search"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:padding="4dp"
        style="@style/Layout_search">
        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:textColor="@color/text_color_setting"
            android:imeOptions="actionDone"
            android:singleLine="true"
            style="@style/Search_Edit_Text">
        </EditText>
        <ImageView
            android:id="@+id/clear_button"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/delete"
            android:layout_margin="8dp"
            android:visibility="gone"
            style="@style/delete">
        </ImageView>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/no_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="102dp"
        android:visibility="gone">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            style="@style/image_no_results"
            android:layout_gravity="center">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_results"
            style="@style/text_placeholder">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="102dp"
        android:visibility="gone">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            style="@style/image_no_internet"
            android:layout_gravity="center">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_internet"
            style="@style/text_placeholder"
            >
        </TextView>
        <Button
            android:id="@+id/button_update"
            android:layout_width="92dp"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:text="@string/search_update"
            android:layout_gravity="center"
            style="@style/Button_Update">
        </Button>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone" />

</LinearLayout>