<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_new_playlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <Button
        android:id="@+id/arrow_back"
        style="@style/Back_Arrow_Style"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:icon="@drawable/arrow1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_new_playlist"
        style="@style/Header_Text_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:text="@string/new_playlist"
        app:layout_constraintBottom_toBottomOf="@id/arrow_back"
        app:layout_constraintLeft_toRightOf="@+id/arrow_back"
        app:layout_constraintTop_toTopOf="@+id/arrow_back" />

    <ImageView
        android:id="@+id/place_for_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/place_for_cover"
        android:scaleType="centerInside"
        android:src="@drawable/icon_add_image"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="@+id/leftBorder24"
        app:layout_constraintRight_toRightOf="@+id/rightBorder24"
        app:layout_constraintTop_toBottomOf="@+id/arrow_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText_name_playlist_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/hint_name"
        android:textColorHint="@color/hint_text"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/border"
        app:hintTextColor="@color/hint"
        app:layout_constraintLeft_toLeftOf="@+id/leftBorder16"
        app:layout_constraintRight_toRightOf="@+id/rightBorder16"
        app:layout_constraintTop_toBottomOf="@+id/place_for_cover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_name_playlist_layout_text"
            style="@style/regular_400_16sp_black1_white1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/custom_cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText_description_playlist_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_description"
        android:textColorHint="@color/hint_text"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="@color/border"
        app:hintTextColor="@color/hint"
        app:layout_constraintBottom_toTopOf="@id/create_button"
        app:layout_constraintLeft_toLeftOf="@+id/leftBorder16"
        app:layout_constraintRight_toRightOf="@+id/rightBorder16"
        app:layout_constraintTop_toBottomOf="@+id/editText_name_playlist_layout"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_description_playlist_text"
            style="@style/regular_400_16sp_black1_white1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/custom_cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_button"
        style="@style/medium_500_16sp_white1"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_state_selector"
        android:enabled="false"
        android:text="@string/create_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/leftBorder16"
        app:layout_constraintRight_toRightOf="@+id/rightBorder16" />

</androidx.constraintlayout.widget.ConstraintLayout>