<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <Button
                android:id="@+id/arrow_back"
                style="@style/Back_Arrow_Style"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:icon="@drawable/arrow1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/cover_track"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toStartOf="@id/rightBorder24"
                app:layout_constraintStart_toEndOf="@+id/leftBorder24"
                app:layout_constraintTop_toBottomOf="@+id/arrow_back" />

            <TextView
                android:id="@+id/track_name_ap"
                style="@style/medium_400_22sp_black1_white1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@id/cover_track"
                app:layout_constraintStart_toStartOf="@+id/cover_track"
                app:layout_constraintTop_toBottomOf="@+id/cover_track"
                tools:text=" Track Name" />

            <TextView
                android:id="@+id/artist_name_ap"
                style="@style/medium_400_14sp_black1_white1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@id/cover_track"
                app:layout_constraintStart_toStartOf="@+id/cover_track"
                app:layout_constraintTop_toBottomOf="@+id/track_name_ap"
                tools:text="Artist Name" />

            <ImageButton
                android:id="@+id/add_track_btn"
                style="@style/add_btn_ap"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="52dp"
                app:layout_constraintBottom_toTopOf="@id/track_time_demo"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/leftBorder24"
                app:layout_constraintRight_toLeftOf="@+id/play_track_btn"
                app:layout_constraintTop_toBottomOf="@+id/artist_name_ap"
                app:layout_constraintVertical_bias="0.064" />

            <ImageButton
                android:id="@+id/play_track_btn"
                style="@style/play_btn_ap"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:padding="0dp"
                app:layout_constraintBottom_toTopOf="@+id/track_time_demo"
                app:layout_constraintLeft_toLeftOf="@+id/leftBorder24"
                app:layout_constraintRight_toRightOf="@+id/rightBorder24"
                app:layout_constraintTop_toBottomOf="@+id/artist_name_ap" />

            <ImageButton
                android:id="@+id/pause_track_btn"
                style="@style/pause_btn_ap"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:padding="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/track_time_demo"
                app:layout_constraintLeft_toLeftOf="@+id/leftBorder24"
                app:layout_constraintRight_toRightOf="@+id/rightBorder24"
                app:layout_constraintTop_toBottomOf="@+id/artist_name_ap" />

            <ImageButton
                android:id="@+id/like_track_btn"
                style="@style/like_btn_ap"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="52dp"
                app:layout_constraintBottom_toTopOf="@id/track_time_demo"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toRightOf="@+id/play_track_btn"
                app:layout_constraintRight_toLeftOf="@+id/rightBorder24"
                app:layout_constraintTop_toBottomOf="@+id/artist_name_ap"
                app:layout_constraintVertical_bias="0.064" />

            <TextView
                android:id="@+id/track_time_demo"
                style="@style/medium_500_14sp_black1_white1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="@+id/leftBorder24"
                app:layout_constraintRight_toRightOf="@+id/rightBorder24"
                app:layout_constraintTop_toBottomOf="@+id/play_track_btn"
                tools:text="time" />

            <TextView
                android:id="@+id/track_time_text_ap"
                style="@style/regular_400_13sp_icon_color2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingVertical="@dimen/padding_vertical_8dp"
                android:text="@string/track_time_text_ap"
                app:layout_constraintStart_toEndOf="@id/leftBorder16"
                app:layout_constraintTop_toBottomOf="@+id/track_time_demo" />

            <TextView
                android:id="@+id/track_time_ap"
                style="@style/regular_400_13sp_black1_white1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="end"
                android:paddingVertical="@dimen/padding_vertical_8dp"
                android:paddingStart="8dp"
                app:layout_constraintEnd_toStartOf="@id/rightBorder16"
                app:layout_constraintStart_toEndOf="@+id/track_time_text_ap"
                app:layout_constraintTop_toBottomOf="@id/track_time_demo"
                tools:text="track_time_ap" />

            <TextView
                android:id="@+id/album_text_ap"
                style="@style/regular_400_13sp_icon_color2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/padding_vertical_8dp"
                android:text="@string/album_text_ap"
                app:layout_constraintStart_toEndOf="@id/leftBorder16"
                app:layout_constraintTop_toBottomOf="@+id/track_time_ap" />

            <TextView
                android:id="@+id/album_ap"
                style="@style/regular_400_13sp_black1_white1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingVertical="@dimen/padding_vertical_8dp"
                android:paddingStart="8dp"
                app:layout_constraintEnd_toStartOf="@id/rightBorder16"
                app:layout_constraintStart_toEndOf="@+id/album_text_ap"
                app:layout_constraintTop_toBottomOf="@id/track_time_ap"
                tools:text="album_ap" />

            <TextView
                android:id="@+id/year_text_ap"
                style="@style/regular_400_13sp_icon_color2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/padding_vertical_8dp"
                android:text="@string/year_text_ap"
                app:layout_constraintStart_toEndOf="@id/leftBorder16"
                app:layout_constraintTop_toBottomOf="@+id/album_ap" />

            <TextView
                android:id="@+id/year_ap"
                style="@style/regular_400_13sp_black1_white1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingVertical="@dimen/padding_vertical_8dp"
                android:paddingStart="8dp"
                app:layout_constraintEnd_toStartOf="@id/rightBorder16"
                app:layout_constraintStart_toEndOf="@+id/year_text_ap"
                app:layout_constraintTop_toBottomOf="@id/album_ap"
                tools:text="year_ap" />

            <TextView
                android:id="@+id/genre_text_ap"
                style="@style/regular_400_13sp_icon_color2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/padding_vertical_8dp"
                android:text="@string/genre_text_ap"
                app:layout_constraintStart_toEndOf="@id/leftBorder16"
                app:layout_constraintTop_toBottomOf="@+id/year_ap" />

            <TextView
                android:id="@+id/genre_ap"
                style="@style/regular_400_13sp_black1_white1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingVertical="@dimen/padding_vertical_8dp"
                android:paddingStart="8dp"
                app:layout_constraintEnd_toStartOf="@id/rightBorder16"
                app:layout_constraintStart_toEndOf="@+id/genre_text_ap"
                app:layout_constraintTop_toBottomOf="@+id/year_ap"
                tools:text="genre_apg" />

            <TextView
                android:id="@+id/country_text_ap"
                style="@style/regular_400_13sp_icon_color2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/padding_vertical_8dp"
                android:text="@string/country_text_ap"
                app:layout_constraintStart_toEndOf="@+id/leftBorder16"
                app:layout_constraintTop_toBottomOf="@+id/genre_ap" />

            <TextView
                android:id="@+id/country_ap"
                style="@style/regular_400_13sp_black1_white1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingVertical="@dimen/padding_vertical_8dp"
                android:paddingStart="8dp"
                app:layout_constraintEnd_toStartOf="@id/rightBorder16"
                app:layout_constraintStart_toEndOf="@+id/country_text_ap"
                app:layout_constraintTop_toBottomOf="@+id/genre_ap"
                tools:text="country_ap" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="505dp"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_sheet_view" />

        <TextView
            style="@style/text_history"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/add_playlist" />

        <Button
            android:id="@+id/newPlaylistButtonAP"
            style="@style/Button_Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/btn_new_playlist"
            android:textAllCaps="false" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_playlist_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>



